CREATE TABLE posts (
    id UUID PRIMARY KEY,
    author_id UUID NOT NULL,
    title VARCHAR(100) NOT NULL,
    content TEXT NOT NULL,
    status VARCHAR(20) NOT NULL,
    view_count BIGINT NOT NULL DEFAULT 0,
    approved_by UUID,
    approved_at TIMESTAMPTZ,
    approval_note TEXT,

    deleted_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_posts_author FOREIGN KEY (author_id) REFERENCES users (id) ON DELETE CASCADE,
    CONSTRAINT fk_posts_approved_by FOREIGN KEY (approved_by) REFERENCES users (id) ON DELETE SET NULL
);

CREATE INDEX idx_posts_author ON posts (author_id) WHERE deleted_at IS NULL;
CREATE INDEX idx_posts_approved_by ON posts (approved_by) WHERE deleted_at IS NULL;

CREATE TRIGGER trg_posts_updated_at
BEFORE UPDATE ON posts FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();


CREATE TABLE comments (
    id UUID PRIMARY KEY,
    post_id UUID NOT NULL,
    author_id UUID NOT NULL,
    parent_id UUID,
    content TEXT NOT NULL,
    deleted_at TIMESTAMPTZ,

    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_comments_post FOREIGN KEY (post_id) REFERENCES posts (id) ON DELETE CASCADE,
    CONSTRAINT fk_comments_author FOREIGN KEY (author_id) REFERENCES users (id) ON DELETE CASCADE,
    CONSTRAINT fk_comments_parent FOREIGN KEY (parent_id) REFERENCES comments (id) ON DELETE CASCADE
);


CREATE INDEX idx_comments_post ON comments (post_id) WHERE deleted_at IS NULL;
CREATE INDEX idx_comments_author ON comments (author_id) WHERE deleted_at IS NULL;
CREATE INDEX idx_comments_parent ON comments (parent_id) WHERE deleted_at IS NULL;

CREATE TRIGGER trg_comments_updated_at
BEFORE UPDATE ON comments FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();


CREATE TABLE post_likes (
    id UUID PRIMARY KEY,
    user_id UUID NOT NULL,
    post_id UUID NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT TRUE,

    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_post_likes_user FOREIGN KEY (user_id) REFERENCES users (id) ON DELETE CASCADE,
    CONSTRAINT fk_post_likes_post FOREIGN KEY (post_id) REFERENCES posts (id) ON DELETE CASCADE
);

CREATE UNIQUE INDEX uq_post_likes_user_post ON post_likes (user_id, post_id);
CREATE INDEX idx_post_likes_count ON post_likes (post_id);
CREATE INDEX idx_post_likes_user ON post_likes (user_id);

CREATE TRIGGER trg_post_likes_updated_at
BEFORE UPDATE ON post_likes FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();


CREATE TABLE comment_likes (
    id UUID PRIMARY KEY,
    user_id UUID NOT NULL,
    comment_id UUID NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT TRUE,

    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_comment_likes_user FOREIGN KEY (user_id) REFERENCES users (id) ON DELETE CASCADE,
    CONSTRAINT fk_comment_likes_comment FOREIGN KEY (comment_id) REFERENCES comments (id) ON DELETE CASCADE
);

CREATE UNIQUE INDEX uq_comment_likes_user_comment ON comment_likes (user_id, comment_id);
CREATE INDEX idx_comment_likes_count ON comment_likes (comment_id);
CREATE INDEX idx_comment_likes_user ON comment_likes (user_id);

CREATE TRIGGER trg_comment_likes_updated_at
BEFORE UPDATE ON comment_likes FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();