package com.ximofam.graduation_project.forums.enums;

public enum PostStatus {
    PENDING,
    APPROVED,
    DENIED;
}
